--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
         <slf4j.version>1.7.29</slf4j.version>
         <logback.version>1.1.7</logback.version>
+        <hutool-all.version>5.0.5</hutool-all.version>
     </properties>
 
     <dependencyManagement>
@@ -118,6 +119,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool-all.version}</version>
         </dependency>
     </dependencies>
 
