--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,16 @@
     <properties>
         <lombok.version>1.18.10</lombok.version>
         <junit.version>4.12</junit.version>
-        <cucumber.version>2.0.0-SNAPSHOT</cucumber.version>
-        <mockito-core.version>2.8.47</mockito-core.version>
+        <cucumber.version>5.0.0-RC1</cucumber.version>
+        <mockito-core.version>3.1.0</mockito-core.version>
         <junit-jupiter.version>5.5.2</junit-jupiter.version>
         <junit-vintage.version>5.5.2</junit-vintage.version>
         <junit-platform.version>1.0.2</junit-platform.version>
         <spring.version>5.2.1.RELEASE</spring.version>
         <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
         <slf4j.version>1.7.29</slf4j.version>
-        <logback.version>1.1.7</logback.version>
+        <logback.version>1.2.3</logback.version>
+        <hutool-all.version>5.0.5</hutool-all.version>
     </properties>
 
     <dependencyManagement>
@@ -118,6 +119,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool-all.version}</version>
         </dependency>
     </dependencies>
 
