--- a/junit4/cucumber/pom.xml
+++ b/junit4/cucumber/pom.xml
@@ -3,27 +3,25 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>junit4j</artifactId>
+        <artifactId>junit4</artifactId>
         <groupId>com.xlaser.junit</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>junit4</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>base</module>
-        <module>mockito</module>
-        <module>spring</module>
-        <module>spring-boot</module>
-        <module>cucumber</module>
-    </modules>
+    <artifactId>cucumber</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
