--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,7 @@ build
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# ignore results
+/junit5/allure/allure-results/
+/junit5/allure/.allure/
 
