--- a/pom.xml
+++ b/pom.xml
@@ -22,25 +22,25 @@
         <junit.version>4.12</junit.version>
         <cucumber.version>5.0.0-RC1</cucumber.version>
         <mockito-core.version>3.1.0</mockito-core.version>
-        <junit-jupiter.version>5.5.2</junit-jupiter.version>
-        <junit-vintage.version>5.5.2</junit-vintage.version>
-        <junit-platform.version>1.0.2</junit-platform.version>
         <spring.version>5.2.1.RELEASE</spring.version>
         <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
         <slf4j.version>1.7.29</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <hutool-all.version>5.0.5</hutool-all.version>
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!--junit4-->
+            <!--junit-->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <!--cucumber frame-->
             <dependency>
                 <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-java</artifactId>
@@ -53,6 +53,8 @@
                 <version>${cucumber.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <!--mockito模拟数据-->
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
@@ -60,40 +62,24 @@
                 <scope>test</scope>
             </dependency>
 
-
-            <!--junit5-->
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${junit-jupiter.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
-                <version>${junit-jupiter.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-params</artifactId>
-                <version>${junit-jupiter.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-        <!--spring boot-->
+            <!--spring boot-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring-boot.version}</version>
                 <scope>test</scope>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -128,9 +114,9 @@
     </dependencies>
 
 
-    <!--set java level 1.8-->
     <build>
         <plugins>
+            <!--set java level 1.8-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -138,6 +124,13 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+
+            <!--使用mvn surefire-report:report命令,在target/site下生成surefire-report.html测试执行报告-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
