--- a/junit5/parameterized/pom.xml
+++ b/junit5/parameterized/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
