--- a/junit5/springboot-rest/pom.xml
+++ b/junit5/springboot-rest/pom.xml
@@ -20,6 +20,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
+        <!--提供restTemplate测试-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
