--- a/junit5/springboot-mockito/pom.xml
+++ b/junit5/springboot-mockito/pom.xml
@@ -25,6 +25,8 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--通过mockito测试-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
