--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <junit.version>4.12</junit.version>
         <cucumber.version>5.0.0-RC1</cucumber.version>
         <mockito-core.version>3.1.0</mockito-core.version>
+        <jmock.version>2.12.0</jmock.version>
+        <hamcrest.version>1.3</hamcrest.version>
         <hutool-all.version>5.0.5</hutool-all.version>
         <lombok.version>1.18.10</lombok.version>
         <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
@@ -62,6 +64,18 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito-core.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jmock</groupId>
+                <artifactId>jmock-junit4</artifactId>
+                <version>${jmock.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-core</artifactId>
+                <version>${hamcrest.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
